fixed missing background on entryType in 2d thumbs

--- a/app/sass/_thumb_2d.sass
+++ b/app/sass/_thumb_2d.sass
@@ -81,9 +81,10 @@
         white-space: nowrap
       .entryType
         +left
+        +round(12)
         width: 32px
         height: 32px
-        margin-left: 4px
+        margin: 4px 0 0 4px
 
     .detailsBottom
       +absolute
@@ -176,6 +177,9 @@
     .date, .location, .comments, .sharing, .entryType
       +transparent-dark(70)
       color: #fff
+    .entryType
+      background-repeat: no-repeat
+      background-position: center
 
     .fadedBack
       background: -moz-linear-gradient(top, rgba(255,255,255,0.0), #fff 100px, #aaa)
@@ -207,7 +211,7 @@
 
 
 
-.dark #entryField .matrix,.dark #home .matrix
+.dark #entryField .matrix, .dark #home .matrix
   .thumb-2d
     background: #3a3a3a
     background: -moz-linear-gradient(top, #3a3a3a, #3a3a3a 100px, #000)
@@ -219,6 +223,9 @@
     .date, .location, .comments, .sharing, .entryType
       +transparent-light(70)
       color: #000
+    .entryType
+      background-repeat: no-repeat
+      background-position: center
 
     .fadedBack
       background: -moz-linear-gradient(top, rgba(58,58,58,0.0), #3a3a3a 100px, #000)
